spring-class-38/infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogging-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: db.blogging-app.home-k8s.lab
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: article-db-service
              port:
                number: 3222
